 - [UPD] Plugin ipmi ranamed to IPMIInfo and Update-Notifier to UpdateNotifier (to avoid name conflicts)
 - [UPD] Case-insensitive for most of parameters
 - [UPD] Updated jQuery plugin to 1.8.3
 - [UPD] Updated jQuery plugin nyroModal to 1.6.2+jquery1.8fix

 - [FIX] Fixed Bug [ 3561124 ] Incorrect reading of free mem on Mac OS X (thanks to pbobbenb)
 - [FIX] Fixed UTF8 encoding for Linux

phpSysInfo 3.0.19

 - [ADD] JSON output support (xml.php?json)
 - [ADD] Partial support of Minix and Haiku
 - [ADD] Added Greek language (gr)
 - [ADD] Alpine and Puppy to detected distros
 
 - [Fix] Fixed LMSensor sensors detection 
 - [FIX] Fix CPU detection on Linux and BSD
 - [FIX] Fix wrong values display on STATIC page
  
phpSysInfo 3.0.18

 - [ADD] SMART plugin REPLACEMENT_ID# (alternative ID number) config option
 - [ADD] Setting the logo for different versions of Windows including Windows2000/XP/Vista/7/8
 - [ADD] Added 'B' (Bytes) for PSI_BYTE_FORMAT units
 - [ADD] Added Thai language (th)

 - [Fix] Fixed Bug [ 3526949 ] Listening IP shows blank if USE_VHOST = true (thanks to NHellFire)
 - [Fix] Fixed some cases on network statistics on Windows
 - [Fix] Fixed language files for missing values

phpSysInfo 3.0.17

 - [ADD] Chakra to detected distros
 - [ADD] Network interfaces infos option PSI_SHOW_NETWORK_INFOS for Linux, FreeBSD and WinNT (experimental)
 
 - [UPD] Updated jQuery plugin to 1.7.2
 - [UPD] Language files (pl, cz)

 - [Fix] Fix SMART Plugin crash on some systems
 - [FIX] Fix SCSI, USB and IDE devices detection on FreeBSD
 - [FIX] Fix PCI, IDE, SCSI, USB and CPU detection on Mac OS X
 - [FIX] Optimization for _timeoutfgets
 - [FIX] Fix CSS for long MOUNT_OPTION text (thanks to develle for the bug report)

phpSysInfo 3.0.16

 - [ADD] Mageia to detected distros
 - [ADD] Added Turkish language (tr)

 - [UPD] Updated jQuery plugin to 1.7.1
 - [UPD] Language files (fi, cz)

phpSysInfo 3.0.15
